--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,22 @@ td, th {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+
+footer{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+
+
+.whiteBackgroundImage {
+    mix-blend-mode: multiply;
+}
+
+main > section {
+    display: flex;
+    gap: 30px 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
